# ChangeLog for sys-libs/slang
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/slang/ChangeLog,v 1.90 2008/04/04 13:32:55 drac Exp $

  04 Apr 2008; Samuli Suominen <drac@gentoo.org> slang-2.1.3-r1.ebuild:
  Keyword ~sparc-fbsd, thanks to Uberlord for testing.

  19 Mar 2008; Samuli Suominen <drac@gentoo.org>
  +files/slang-2.1.3-uclibc.patch, slang-2.1.3-r1.ebuild:
  Fix a regression from slang-1.4.9-r2, building on uclibc wrt bug 213925
  thanks to Natanael Copa.

  13 Mar 2008; Jeroen Roovers <jer@gentoo.org> slang-2.1.3-r1.ebuild:
  Stable for HPPA (bug #211986).

  11 Mar 2008; Brent Baude <ranger@gentoo.org> ChangeLog:
  stable ppc64, bug 211991

  11 Mar 2008; Brent Baude <ranger@gentoo.org> slang-2.1.3-r1.ebuild:
  stable ppc64, bug 211986

  10 Mar 2008; Samuli Suominen <drac@gentoo.org> slang-2.1.3-r1.ebuild:
  amd64 stable wrt #211986

  10 Mar 2008; Raúl Porcel <armin76@gentoo.org> slang-2.1.3-r1.ebuild:
  alpha/ia64/sparc stable wrt #211986

  09 Mar 2008; nixnut <nixnut@gentoo.org> slang-2.1.3-r1.ebuild:
  Stable on ppc wrt bug 211986

  09 Mar 2008; Markus Meier <maekke@gentoo.org> slang-2.1.3-r1.ebuild:
  x86 stable, bug #211986

  17 Feb 2008; Alexis Ballier <aballier@gentoo.org> slang-2.1.3-r1.ebuild:
  keyword ~x86-fbsd

  15 Feb 2008; Samuli Suominen <drac@gentoo.org> slang-2.1.3-r1.ebuild:
  If USE readline is used, and it's enabled by default in profiles use system
  readline for slsh instead of native slang.

  15 Feb 2008; Samuli Suominen <drac@gentoo.org> slang-2.1.3-r1.ebuild:
  sys-libs/ncurses is required for /usr/share/terminfo files which means it
  cannot be built with USE minimal wrt #210063 by Saul Peebsen.

  11 Feb 2008; Jeroen Roovers <jer@gentoo.org> slang-2.1.3-r1.ebuild:
  Marked ~hppa (bug #209422).

  11 Feb 2008; Raúl Porcel <armin76@gentoo.org> slang-2.1.3-r1.ebuild:
  Re-add ~ia64/~sparc
